<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="pokemon"
            type="com.example.practica12_pokedex.main.ui.models.PokemonSprite" />

        <variable
            name="pokemonInfo"
            type="com.example.practica12_pokedex.main.ui.models.Pokemon" />
    </data>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="32dp"
            android:descendantFocusability="blocksDescendants">

            <TextView
                android:id="@+id/index"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_marginStart="12dp"
                android:text="@{pokemonInfo.idString}"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:translationZ="100dp"
                app:layout_constraintEnd_toEndOf="@id/header"
                app:layout_constraintTop_toTopOf="@id/header"
                tools:text="#001" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="36dp"
                android:text="@{pokemon.name}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/white"
                android:textSize="36sp"
                android:textStyle="bold"
                android:translationZ="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header"
                tools:text="Aitor" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:background="@color/colorPrimary"
                android:elevation="9dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/CardView.Dark" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image"
                android:layout_width="190dp"
                android:layout_height="190dp"
                android:layout_marginBottom="20dp"
                android:scaleType="center"
                android:translationZ="100dp"
                app:layout_constraintBottom_toBottomOf="@id/header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:paletteImage="@{pokemon.imageUrl}"
                />

            <com.skydoves.androidribbon.RibbonRecyclerView
                android:id="@+id/ribbonRecyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:bindPokemonTypes="@{pokemonInfo.types}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name"
                app:ribbon_recycler_orientation="horizontal" />

            <TextView
                android:id="@+id/weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@{pokemonInfo.weight}"
                android:textSize="21sp"
                app:layout_constraintEnd_toStartOf="@id/height"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ribbonRecyclerView"
                tools:text="24.0 KG" />

            <TextView
                android:id="@+id/height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{pokemonInfo.height}"
                android:textSize="21sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/weight"
                app:layout_constraintTop_toTopOf="@id/weight"
                tools:text="11 M" />

            <TextView
                android:id="@+id/weight_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textColor="@color/white_56"
                app:layout_constraintEnd_toStartOf="@id/height"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/weight"
                tools:text="Weight" />

            <TextView
                android:id="@+id/height_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textColor="@color/white_56"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/weight"
                app:layout_constraintTop_toBottomOf="@id/height" />

            <TextView
                android:id="@+id/stats_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/base_stats"
                android:textColor="@color/white_93"
                android:textSize="21sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/weight_title" />

            <TextView
                android:id="@+id/hp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="4dp"
                android:text="@string/hp"
                android:textColor="@color/white_70"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/stats_title" />

            <com.skydoves.progressview.ProgressView
                android:id="@+id/progress_hp"
                android:layout_width="0dp"
                android:layout_height="18dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintBottom_toBottomOf="@id/hp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/hp"
                app:layout_constraintTop_toTopOf="@id/hp"
                app:progressView_colorBackground="@color/white"
                app:progressView_colorProgress="@color/colorPrimary"
                app:progressView_labelColorInner="@color/white"
                app:progressView_labelColorOuter="@color/black"
                app:progressView_labelSize="12sp"
                app:progressView_labelText="@{pokemonInfo.hpString}"
                app:progressView_max="@{pokemonInfo.maxHp}"
                app:progressView_progress="@{pokemonInfo.hp}"
                app:progressView_radius="12dp" />

            <TextView
                android:id="@+id/attack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:text="@string/atk"
                android:textColor="@color/white_70"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/hp" />

            <com.skydoves.progressview.ProgressView
                android:id="@+id/progress_attack"
                android:layout_width="0dp"
                android:layout_height="18dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintBottom_toBottomOf="@id/attack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/progress_hp"
                app:layout_constraintTop_toTopOf="@id/attack"
                app:progressView_colorBackground="@color/white"
                app:progressView_colorProgress="@color/md_orange_100"
                app:progressView_labelColorInner="@color/white"
                app:progressView_labelColorOuter="@color/black"
                app:progressView_labelSize="12sp"
                app:progressView_labelText="@{pokemonInfo.attackString}"
                app:progressView_max="@{pokemonInfo.maxAttack}"
                app:progressView_progress="@{pokemonInfo.attack}"
                app:progressView_radius="12dp" />

            <TextView
                android:id="@+id/defense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:text="@string/def"
                android:textColor="@color/white_70"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/attack" />

            <com.skydoves.progressview.ProgressView
                android:id="@+id/progress_defense"
                android:layout_width="0dp"
                android:layout_height="18dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintBottom_toBottomOf="@id/defense"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/progress_hp"
                app:layout_constraintTop_toTopOf="@id/defense"
                app:progressView_colorBackground="@color/white"
                app:progressView_colorProgress="@color/md_blue_200"
                app:progressView_labelColorInner="@color/white"
                app:progressView_labelColorOuter="@color/black"
                app:progressView_labelSize="12sp"
                app:progressView_labelText="@{pokemonInfo.defenseString}"
                app:progressView_max="@{pokemonInfo.maxDefense}"
                app:progressView_progress="@{pokemonInfo.defense}"
                app:progressView_radius="12dp" />

            <TextView
                android:id="@+id/speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:text="@string/spd"
                android:textColor="@color/white_70"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/defense" />

            <com.skydoves.progressview.ProgressView
                android:id="@+id/progress_speed"
                android:layout_width="0dp"
                android:layout_height="18dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintBottom_toBottomOf="@id/speed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/progress_hp"
                app:layout_constraintTop_toTopOf="@id/speed"
                app:progressView_colorBackground="@color/white"
                app:progressView_colorProgress="@color/flying"
                app:progressView_labelColorInner="@color/white"
                app:progressView_labelColorOuter="@color/black"
                app:progressView_labelSize="12sp"
                app:progressView_labelText="@{pokemonInfo.speedString}"
                app:progressView_max="@{pokemonInfo.maxSpeed}"
                app:progressView_progress="@{pokemonInfo.speed}"
                app:progressView_radius="12dp" />

            <TextView
                android:id="@+id/exp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:text="@string/exp"
                android:textColor="@color/white_70"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/speed" />

            <com.skydoves.progressview.ProgressView
                android:id="@+id/progress_exp"
                android:layout_width="0dp"
                android:layout_height="18dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintBottom_toBottomOf="@id/exp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/progress_hp"
                app:layout_constraintTop_toTopOf="@id/exp"
                app:progressView_colorBackground="@color/white"
                app:progressView_colorProgress="@color/md_green_200"
                app:progressView_labelColorInner="@color/white"
                app:progressView_labelColorOuter="@color/black"
                app:progressView_labelSize="12sp"
                app:progressView_labelText="@{pokemonInfo.expString}"
                app:progressView_max="@{pokemonInfo.maxExp}"
                app:progressView_progress="@{pokemonInfo.exp}"
                app:progressView_radius="12dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>